Drive plate relief by motion and add 30 percent land contour viewer